🐞 PIC-1859 save defendant sex as "FEMALE", return as "F", etc